--- a/CS_460_Software_Engineering/HW5/HW5/Views/Home/AddressChanges.cshtml
+++ b/CS_460_Software_Engineering/HW5/HW5/Views/Home/AddressChanges.cshtml
@@ -1,3 +1,28 @@
 ﻿@{
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+
+@model IEnumerable<HW5.Models.Driver>
+<div id="dbTable">
+    <table>
+        <thead>
+            <tr>
+                <th>ID</th>
+            </tr>
+        </thead>
+        <tbody>
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>item.DriverID</td>
+            </tr>
+        }
+        </tbody>
+    </table>
+</div>
+
+@section PageScripts
+{
+    <script>
+    </script>
+}
