--- a/CS_460_Software_Engineering/HW5/HW5/css/site.css
+++ b/CS_460_Software_Engineering/HW5/HW5/css/site.css
@@ -49,3 +49,37 @@ nav li > a:hover {
 .content {
     padding: 25px;
 }
+
+table {
+    border: 3px solid;
+    border-color: #411;
+}
+
+td, th {
+    border: 1px solid #411;
+    padding: 5px;
+}
+
+    td:nth-child(2) {
+        font-style: italic;
+    }
+
+    td:nth-last-child(1) {
+        font-weight: bold;
+    }
+
+th {
+    border-bottom: 3px solid;
+    font-family: "Patrick Hand SC";
+    font-size: 110%;
+    color: #411;
+    background-color: #f76;
+}
+
+tr:nth-child(odd) {
+    background-color: #fec;
+}
+
+tr:nth-child(even) {
+    background-color: #ffe;
+}
