Working on documentation, ZzzZzz

--- a/CS_460_Software_Engineering/HW5/HW5/Views/Home/Index.cshtml
+++ b/CS_460_Software_Engineering/HW5/HW5/Views/Home/Index.cshtml
@@ -1,3 +1,9 @@
 ﻿@{
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+
+<h2>About Homework 5</h2>
+<p>Homework 5 builds on Homework 4 by having us create another ASP.NET MVC 5 project with the added wrinkle of connecting it to a small database 
+    that is already populated and can be added to. The original assignment can be found 
+    <a href="https://www.wou.edu/~morses/classes/cs46x/assignments/HW5.html">here</a> and the code can be found 
+    <a href="https://github.com/mcalawa/senior_project/tree/master/CS_460_Software_Engineering/HW5">here</a>.</p>
