More documentation, ho hum.

--- a/CS_460_Software_Engineering/HW5/HW5/Views/Home/Index.cshtml
+++ b/CS_460_Software_Engineering/HW5/HW5/Views/Home/Index.cshtml
@@ -7,3 +7,22 @@
     that is already populated and can be added to. The original assignment can be found 
     <a href="https://www.wou.edu/~morses/classes/cs46x/assignments/HW5.html">here</a> and the code can be found 
     <a href="https://github.com/mcalawa/senior_project/tree/master/CS_460_Software_Engineering/HW5">here</a>.</p>
+
+<h2>Screenshots</h2>
+<p>While there is also a live demo, so you can try out the finished product for yourself, we were requested to include screenshots to prove 
+    that our website was working correctly. So, to begin, here is the page displaying the initial database before any new information was 
+    added to it:</p>
+
+<img src="~/images/demo1.png" />
+
+<p>As you can see, there are five items in the database which match the contents of the up.sql file. An important aspect of the assignment 
+    is to be able to add new items to the database, so here is the page where new address changes can be entered with a new database item 
+    already entered and ready to be submitted:</p>
+
+<img src="~/images/demo2.png" />
+
+<p>Finally, here is the result when you click the submit button:</p>
+
+<img src="~/images/demo3.png" />
+
+<p>As you can see, the new item has been added to the database without any issues.</p>
