Added screenshots to hw4

--- a/CS_460_Software_Engineering/HW4/HW4/Views/Home/Index.cshtml
+++ b/CS_460_Software_Engineering/HW4/HW4/Views/Home/Index.cshtml
@@ -134,3 +134,31 @@
 <img src="~/images/page3-3.png" />
 
 <p>And that is how model binding works. For more detail, try out the demos and check the code on my GitHub.</p>
+
+<h2>Demo Screenshots</h2>
+<p>We were asked to include screenshots of the demo to prove that everything works even if we have a live demo, so here are some 
+    final screenshots (taken on November 17th, 2017, since that matters for my "days until your birthday" calculator) to see you off:</p>
+
+<img src="~/images/page1demo1.png" />
+
+<p>The input for page 1.</p>
+
+<img src="~/images/page1demo2.png" />
+
+<p>The result for page 1. As you can see, the result is displayed on a different URL and the input has been received by query string.</p>
+
+<img src="~/images/page2demo1.png" />
+
+<p>The input for page 2.</p>
+
+<img src="~/images/page2demo2.png" />
+
+<p>The result for page 2. As you can see, the result is displayed on the same page.</p>
+
+<img src="~/images/page3demo1.png" />
+
+<p>The input for page 3.</p>
+
+<img src="~/images/page3demo2.png" />
+
+<p>The result for page 3. As you can see, the result is displayed on the same page.</p>
