--- a/CS_460_Software_Engineering/HW6/HW6/Views/Home/Clothing.cshtml
+++ b/CS_460_Software_Engineering/HW6/HW6/Views/Home/Clothing.cshtml
@@ -4,7 +4,7 @@
 }
 
 @section Breadcrumbs {
-    <p><a href="/clothing">Clothing</a> <span class="subVisibility">></span> <a href="/clothing/@ViewBag.Clothing">@ViewBag.Sub</a> <span class="productVisibility">></span> <a href="/clothing/@ViewBag.Clothing/@ViewBag.Id">@ViewBag.Product</a></p>
+    <a href="/clothing">Clothing</a> <span class="subVisibility">></span> <a href="/clothing/@ViewBag.Clothing">@ViewBag.Sub</a> <span class="productVisibility">></span> <a href="/clothing/@ViewBag.Clothing/@ViewBag.Id">@ViewBag.Product</a>
 }
 
 <h2>@ViewBag.Header</h2>
