--- a/CS_460_Software_Engineering/HW6/HW6/Views/Home/Accessories.cshtml
+++ b/CS_460_Software_Engineering/HW6/HW6/Views/Home/Accessories.cshtml
@@ -4,7 +4,7 @@
 }
 
 @section Breadcrumbs {
-    <p><a href="/accessories">Accessories</a> <span class="subVisibility">></span> <a href="/accessories/@ViewBag.Accessories">@ViewBag.Sub</a> <span class="productVisibility">></span> <a href="/accessories/@ViewBag.Accessories/@ViewBag.Id">@ViewBag.Product</a></p>
+    <a href="/accessories">Accessories</a> <span class="subVisibility">></span> <a href="/accessories/@ViewBag.Accessories">@ViewBag.Sub</a> <span class="productVisibility">></span> <a href="/accessories/@ViewBag.Accessories/@ViewBag.Id">@ViewBag.Product</a>
 }
 
 <h2>@ViewBag.Header</h2>
