--- a/CS_460_Software_Engineering/HW6/HW6/Views/Home/Bikes.cshtml
+++ b/CS_460_Software_Engineering/HW6/HW6/Views/Home/Bikes.cshtml
@@ -4,41 +4,36 @@
 }
 
 @section Breadcrumbs {
-    <p><a href="/bikes">Bikes</a> <span class="subVisibility">></span> <a href="/bikes/@ViewBag.Bikes" class="subCat">@ViewBag.Sub</a> <span class="productVisibility">></span> <a href="/bikes/@ViewBag.Bikes/@ViewBag.Id" class="product">@ViewBag.Product</a></p>
+    <a href="/bikes">Bikes</a> <span class="subVisibility">></span> <a href="/bikes/@ViewBag.Bikes" class="subCat">@ViewBag.Sub</a> <span class="productVisibility">></span> <a href="/bikes/@ViewBag.Bikes/@ViewBag.Id" class="product">@ViewBag.Product</a>
 }
 
 <h2>@ViewBag.Header</h2>
 
-<div id="sideBar"></div>
-
 <!-- The View if they are viewing the category -->
 @if(ViewBag.Type == "Category")
 {
-    <h2>Category</h2>
+    <p>Category</p>
 } <!-- The View if they are viewing the category -->
 
 <!-- The View if they are viewing the subcategory -->
 @if(ViewBag.Type == "SubCategory")
 {
-    <h2>Subcategory</h2>
+    <p>Subcategory</p>
 } <!-- The View if they are viewing the subcategory -->
 
 <!-- The View if they are viewing the product -->
 @if(ViewBag.Type == "Product")
 {
-    <h2>Product</h2>
+    <p>Product</p>
 } <!-- The View if they are viewing the product -->
 
 @section PageScripts {
     <script>
         function setDynamicElements() {
             var url = window.location.pathname.split("/");
-
             if (url.length <= 2) {
                 $(".subVisibility").css("visibility", "hidden");
                 $(".productVisibility").css("visibility", "hidden");
-                $("#sideBar").html("<ul>");
-                $("#sideBar").append(@ViewBag.SideBar);
             }
             else if (url.length == 3) {
                 $(".subVisibility").css("visibility", "visible");
