--- a/CS_460_Software_Engineering/HW6/HW6/Views/Home/Components.cshtml
+++ b/CS_460_Software_Engineering/HW6/HW6/Views/Home/Components.cshtml
@@ -4,7 +4,7 @@
 }
 
 @section Breadcrumbs {
-    <p><a href="/components">Components</a> <span class="subVisibility">></span> <a href="/components/@ViewBag.Components">@ViewBag.Sub</a> <span class="productVisibility">></span> <a href="/components/@ViewBag.Components/@ViewBag.Id">@ViewBag.Product</a></p>
+    <a href="/components">Components</a> <span class="subVisibility">></span> <a href="/components/@ViewBag.Components">@ViewBag.Sub</a> <span class="productVisibility">></span> <a href="/components/@ViewBag.Components/@ViewBag.Id">@ViewBag.Product</a>
 }
 
 <h2>@ViewBag.Header</h2>
